--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,14 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <!-- Navbar -->
+    <div ng-include src="'views/_navbar.html'"></div>
+
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
+
+    <!-- Footer -->
+    <div ng-include src="'views/_footer.html'"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -56,6 +62,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/account.js"></script>
+        <script src="scripts/controllers/map.js"></script>
+        <script src="scripts/controllers/events.js"></script>
         <!-- endbuild -->
 </body>
 </html>
