Working version of UniCal.

--- a/unical-app/index.html
+++ b/unical-app/index.html
@@ -148,12 +148,12 @@
       <div id="selected-courses-output"></div>
       
       <hr/>
-      
+
       <h3>Ready to submit?</h3>
       <button class="btn btn-success submit-btn">Submit my courses!</button>
 
       <h2>Step 3: Profit</h2>
-      <p>Please wait...</p>
+      <p id="result" class="alert alert-success">Please wait...</p>
 
     </div>
 
