UniCal now Displays link to Calendar when sucessful. Added screenshots.

--- a/unical-app/index.html
+++ b/unical-app/index.html
@@ -153,7 +153,19 @@
       <button class="btn btn-success submit-btn">Submit my courses!</button>
 
       <h2>Step 3: Profit</h2>
-      <p id="result" class="alert alert-success">Please wait...</p>
+        <section id="finish-section" class="alert alert-success" data-index="4">
+            <form class="form-horizontal" role="form">
+                <h2><i class="glyphicon glyphicon-ok-sign"></i> Finish</h2>
+                <p class="lead">
+                Calendar URL: 
+                <a href="#" id="calendarURL" target="_blank">Please select your courses above and then submit.</a>
+                <br/><hr/>
+                <i class="glyphicon glyphicon-floppy-save"></i>  Click/copy the above Calendar URL.
+                </p>
+            </form>
+        </section>
+
+      </p>
 
     </div>
 
